test/files/neg/t10097.scala

case class C(implicit val c: Int)

case class D(implicit c: Int)(s: String)
